syntax = "proto3";

package widgetkit.dsl.proto;

option java_package = "com.widgetkit.dsl.proto";
option java_multiple_files = true;

// Widget rendering type
enum WidgetType {
  WIDGET_TYPE_GLANCE = 0;  // Default type
  WIDGET_TYPE_REMOTE_VIEWS = 1;
}

// Widget mode (normal vs preview)
enum WidgetMode {
  WIDGET_MODE_NORMAL = 0;   // Default mode
  WIDGET_MODE_PREVIEW = 1;
}

// Top-level document storing the full widget layout tree.
message WidgetLayoutDocument {
  WidgetNode root = 1;
  WidgetMode widget_mode = 2;  // Defaults to WIDGET_MODE_NORMAL (0)
}

// Recursive node representation so layouts are stored as a hierarchy.
message WidgetNode {
  oneof payload {
    BoxLayoutProperty box = 1;
    RowLayoutProperty row = 2;
    ColumnLayoutProperty column = 3;
    ListLayoutProperty list = 4;
    TextProperty text = 5;
    ImageProperty image = 6;
    ButtonProperty button = 7;
    SpacerProperty spacer = 8;
    ProgressProperty progress = 9;
    CheckboxProperty checkbox = 10;
  }
  repeated WidgetNode children = 11;
  WidgetType widget_type = 12;  // Defaults to WIDGET_TYPE_GLANCE (0)
}

// --------------------------
// Base property abstractions
// --------------------------

message Dp {
  float value = 1;
}

message Dimension {
  oneof value {
    Dp dp = 1;
    bool wrap_content = 2;
    bool match_parent = 3;
    float weight = 4;
  }
}

message Padding {
  Dp start = 1;
  Dp top = 2;
  Dp end = 3;
  Dp bottom = 4;
}

message CornerRadius {
  float radius = 1;
}

message Component {
  string package_name = 1;
  string class_name = 2;
}

message Action {
  bool activity = 1;
  bool service = 2;
  bool broadcast_receiver = 3;
  bool lambda = 4;
  Component component = 5;
  bytes action_parameters = 6;
}

message Semantics {
  string content_description = 1;
}

enum FontWeight {
  FONT_WEIGHT_UNSPECIFIED = 0;
  FONT_WEIGHT_NORMAL = 1;
  FONT_WEIGHT_MEDIUM = 2;
  FONT_WEIGHT_BOLD = 3;
}

enum TextAlign {
  TEXT_ALIGN_UNSPECIFIED = 0;
  TEXT_ALIGN_START = 1;
  TEXT_ALIGN_END = 2;
  TEXT_ALIGN_CENTER = 3;
}

message Color {
  uint32 argb = 1;
}

message ColorProvider {
  int32 res_id = 1;
  Color color = 2;
  Color dark_color = 3;
}

message TextContent {
  int32 res_id = 1;
  string text = 2;
}

message ImageProvider {
  oneof source {
    int32 drawable_res_id = 1;
    bytes bitmap = 2;
    string uri = 3;
    string icon_resource = 4;
  }
}

enum ContentScale {
  CONTENT_SCALE_UNSPECIFIED = 0;
  CONTENT_SCALE_CROP = 1;
  CONTENT_SCALE_FIT = 2;
  CONTENT_SCALE_FILL_BOUNDS = 3;
}

enum ProgressType {
  PROGRESS_TYPE_UNSPECIFIED = 0;
  PROGRESS_TYPE_LINEAR = 1;
  PROGRESS_TYPE_CIRCULAR = 2;
}

// --------------------------
// Layout alignment structures
// --------------------------

enum HorizontalAlignment {
  H_ALIGN_UNSPECIFIED = 0;
  H_ALIGN_START = 1;
  H_ALIGN_CENTER = 2;
  H_ALIGN_END = 3;
}

enum VerticalAlignment {
  V_ALIGN_UNSPECIFIED = 0;
  V_ALIGN_TOP = 1;
  V_ALIGN_CENTER = 2;
  V_ALIGN_BOTTOM = 3;
}

enum AlignmentType {
  ALIGNMENT_TYPE_UNSPECIFIED = 0;
  ALIGNMENT_TYPE_TOP_START = 1;
  ALIGNMENT_TYPE_TOP_CENTER = 2;
  ALIGNMENT_TYPE_TOP_END = 3;
  ALIGNMENT_TYPE_CENTER_START = 4;
  ALIGNMENT_TYPE_CENTER = 5;
  ALIGNMENT_TYPE_CENTER_END = 6;
  ALIGNMENT_TYPE_BOTTOM_START = 7;
  ALIGNMENT_TYPE_BOTTOM_CENTER = 8;
  ALIGNMENT_TYPE_BOTTOM_END = 9;
  ALIGNMENT_TYPE_TOP = 10;
  ALIGNMENT_TYPE_CENTER_VERTICAL = 11;
  ALIGNMENT_TYPE_BOTTOM = 12;
  ALIGNMENT_TYPE_START = 13;
  ALIGNMENT_TYPE_CENTER_HORIZONTAL = 14;
  ALIGNMENT_TYPE_END = 15;
}

message Alignment {
  AlignmentType alignment = 1;
  HorizontalAlignment horizontal = 2;
  VerticalAlignment vertical = 3;
}

// --------------------------
// View property base
// --------------------------

message ViewProperty {
  int32 view_id = 1;
  Dimension width = 2;
  Dimension height = 3;
  Padding padding = 4;
  CornerRadius corner_radius = 5;
  Semantics semantics = 6;
  Action click_action = 7;
  ColorProvider background_color = 8;
  bool partially_update = 9;
  bool hide = 10;
}

// --------------------------
// Layout nodes
// --------------------------

message BoxLayoutProperty {
  ViewProperty view_property = 1;
  AlignmentType content_alignment = 2;
}

message RowLayoutProperty {
  ViewProperty view_property = 1;
  HorizontalAlignment horizontal_alignment = 2;
  VerticalAlignment vertical_alignment = 3;
}

message ColumnLayoutProperty {
  ViewProperty view_property = 1;
  HorizontalAlignment horizontal_alignment = 2;
  VerticalAlignment vertical_alignment = 3;
}

message ListLayoutProperty {
  ViewProperty view_property = 1;
  HorizontalAlignment horizontal_alignment = 2;
}

// --------------------------
// UI component nodes
// --------------------------

message TextProperty {
  ViewProperty view_property = 1;
  TextContent text = 2;
  int32 max_line = 3;
  ColorProvider font_color = 4;
  float font_size = 5;
  FontWeight font_weight = 6;
  TextAlign text_align = 7;
}

message ImageProperty {
  ViewProperty view_property = 1;
  ImageProvider provider = 2;
  Color tint_color = 3;
  float alpha = 4;
  ContentScale content_scale = 5;
  bool animation = 6;
  bool infinite_loop = 7;
}

message ButtonProperty {
  ViewProperty view_property = 1;
  TextContent text = 2;
  int32 max_line = 3;
  ColorProvider font_color = 4;
  float font_size = 5;
  FontWeight font_weight = 6;
  ColorProvider background_color = 7;
}

message SpacerProperty {
  ViewProperty view_property = 1;
}

message ProgressProperty {
  ViewProperty view_property = 1;
  ProgressType progress_type = 2;
  float max_value = 3;
  float progress_value = 4;
  ColorProvider progress_color = 5;
  ColorProvider background_color = 6;
}

message CheckboxProperty {
  ViewProperty view_property = 1;
  bool checked = 2;
  ColorProvider checked_color = 4;
  ColorProvider unchecked_color = 5;
  // 체크박스 라벨 텍스트 스타일 속성
  TextProperty text_property = 6;
}
